fix gallery on mobile

--- a/src/scss/_gallery.scss
+++ b/src/scss/_gallery.scss
@@ -8,7 +8,8 @@ $gallery-index: (caption, images);
   display: grid;
   gap: var(--spacing-block) var(--gutter);
   grid-auto-columns: 1fr;
-  grid-auto-flow: column;
+  grid-auto-flow: row;
+  grid-template-columns: 100%;
 
   > img,
   > video {
@@ -229,6 +230,8 @@ $gallery-index: (caption, images);
   }
 
   @media (--tablet-up) {
+    grid-auto-flow: row;
+
     &.grid\:ls {
       display: grid;
       grid-template-rows: repeat(3, auto);
